set increment to false on it-release config

--- a/.release-it.json
+++ b/.release-it.json
@@ -1,9 +1,7 @@
 {
   "pkgFiles": ["package.json"],
   "requireUpstream": false,
-  "increment": "conventional:angular",
-  "beforeChangelogCommand": "conventional-changelog -p angular -i CHANGELOG.md -s",
-  "changelogCommand": "conventional-changelog -p angular | tail -n +3",
+  "increment": false,
   "requireCleanWorkingDir": false,
   "safeBump": false,
   "github": {
